force-app/main/default/objects/Study__c/Study__c.object-meta.xml
<CustomObject>
    <label>Study</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Study</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>