force-app/main/default/objects/Study__c/fields/Blinding__c.field-meta.xml
<CustomField>
    <fullName>Blinding__c</fullName>
    <label>Blinding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blinded</fullName>
            </value>
            <value>
                <fullName>Open Label</fullName>
            </value>
            <value>
                <fullName>Partially Blinded</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>