force-app/main/default/objects/Study__c/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <formula>Account__r.DUNS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DUNS #</label>
    <type>Text</type>
</CustomField>