force-app/main/default/objects/Study__c/fields/Executive_Priority__c.field-meta.xml
<CustomField>
    <fullName>Executive_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Priority</label>
    <type>Checkbox</type>
</CustomField>