force-app/main/default/objects/Study__c/fields/GoLiveDate__c.field-meta.xml
<CustomField>
    <fullName>GoLiveDate__c</fullName>
    <label>GoLiveDate</label>
    <type>DateTime</type>
</CustomField>