force-app/main/default/objects/Study__c/fields/IRT_Usage__c.field-meta.xml
<CustomField>
    <fullName>IRT_Usage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IRT Usage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Picklist_Value__c.Type__c</field>
            <operation>equals</operation>
            <value>STUDY_USAGE</value>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Picklist_Value__c</referenceTo>
    <relationshipLabel>Studies (IRT Usage)</relationshipLabel>
    <relationshipName>Studies3</relationshipName>
    <type>Lookup</type>
</CustomField>