force-app/main/default/objects/Study__c/fields/Missing_Info_Comments__c.field-meta.xml
<CustomField>
    <fullName>Missing_Info_Comments__c</fullName>
    <label>Missing Info Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>