force-app/main/default/objects/Study__c/fields/Notification_Priority__c.field-meta.xml
<CustomField>
    <fullName>Notification_Priority__c</fullName>
    <label>Notification Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>