force-app/main/default/objects/Study__c/fields/Revenue_Class__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Class__c</fullName>
    <label>Revenue Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Commercial Electric Service</fullName>
            </value>
            <value>
                <fullName>Commercial Gas Service</fullName>
            </value>
            <value>
                <fullName>Commercial Local Service</fullName>
            </value>
            <value>
                <fullName>Commercial Long Distance</fullName>
            </value>
            <value>
                <fullName>Industrial Electric</fullName>
            </value>
            <value>
                <fullName>Industrial Electric Service</fullName>
            </value>
            <value>
                <fullName>Industrial Gas</fullName>
            </value>
            <value>
                <fullName>Industrial Gas Service</fullName>
            </value>
            <value>
                <fullName>Industrial Water</fullName>
            </value>
            <value>
                <fullName>Residential Electric Service</fullName>
            </value>
            <value>
                <fullName>Residential Gas Service</fullName>
            </value>
            <value>
                <fullName>Residential Local Service</fullName>
            </value>
            <value>
                <fullName>Residential Long Distance</fullName>
            </value>
            <value>
                <fullName>1-Pipeline</fullName>
            </value>
            <value>
                <fullName>5-Closed</fullName>
            </value>
            <value>
                <fullName>4-Committed</fullName>
            </value>
            <value>
                <fullName>2-Upside</fullName>
            </value>
            <value>
                <fullName>3-Expected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>