force-app/main/default/objects/Study__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Advisory Offer</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Debt Offer</fullName>
            </value>
            <value>
                <fullName>Deposit Offer</fullName>
            </value>
            <value>
                <fullName>Equity Offer</fullName>
            </value>
            <value>
                <fullName>Loan Offer</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Projected</fullName>
            </value>
            <value>
                <fullName>Quota</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>