force-app/main/default/objects/Study__c/fields/Sales_Objective__c.field-meta.xml
<CustomField>
    <fullName>Sales_Objective__c</fullName>
    <label>Sales Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>