force-app/main/default/objects/Study__c/fields/Site_Activation__c.field-meta.xml
<CustomField>
    <fullName>Site_Activation__c</fullName>
    <label>Site Activation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>