force-app/main/default/objects/Study__c/fields/Site_Admin_Comments__c.field-meta.xml
<CustomField>
    <fullName>Site_Admin_Comments__c</fullName>
    <label>Site Admin Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>