force-app/main/default/objects/Study__c/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <label>Site URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>