force-app/main/default/objects/Study__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>AccountTypes__c.Type__c</field>
            <operation>equals</operation>
            <value>Sponsor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountTypes__c</referenceTo>
    <relationshipLabel>Studies</relationshipLabel>
    <relationshipName>Studies</relationshipName>
    <type>Lookup</type>
</CustomField>