force-app/main/default/objects/Study__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <label>Study #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>