force-app/main/default/objects/Study__c/fields/Study_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Study_Allocation__c</fullName>
    <label>Study Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Randomized</fullName>
            </value>
            <value>
                <fullName>Non-Randomized</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>