force-app/main/default/objects/Study__c/fields/Study_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Name__c</fullName>
    <label>Study Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>