force-app/main/default/objects/Study__c/fields/Study_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Study_Nickname__c</fullName>
    <label>Study Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>