force-app/main/default/objects/Study__c/fields/System_Version__c.field-meta.xml
<CustomField>
    <fullName>System_Version__c</fullName>
    <label>System Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>