force-app/main/default/objects/Study__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapeutic Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Picklist_Value__c.Type__c</field>
            <operation>equals</operation>
            <value>THERAPEUTIC_TYPE</value>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Picklist_Value__c</referenceTo>
    <relationshipLabel>Studies (Therapeutic Area)</relationshipLabel>
    <relationshipName>Studies2</relationshipName>
    <type>Lookup</type>
</CustomField>