force-app/main/default/objects/Study__c/fields/User_Mgmt_Comments__c.field-meta.xml
<CustomField>
    <fullName>User_Mgmt_Comments__c</fullName>
    <label>User Mgmt Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>