force-app/main/default/objects/Study__c/fields/User_Training_Comments__c.field-meta.xml
<CustomField>
    <fullName>User_Training_Comments__c</fullName>
    <label>User Training Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>