force-app/main/default/objects/Study__c/recordTypes/HC_Clinical.recordType-meta.xml
<RecordType>
    <fullName>HC_Clinical</fullName>
    <active>true</active>
    <description>This record type is used for clinical.</description>
    <label>HC Clinical</label>
</RecordType>