force-app/main/default/objects/Study__c/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL( Account__c ), ISBLANK(Account__c ))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account is Required.</errorMessage>
</ValidationRule>