force-app/main/default/objects/Study__c/validationRules/HC_Clinical_Country_Novo.validationRule-meta.xml
<ValidationRule>
    <fullName>HC_Clinical_Country_Novo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Account__r.Name = &quot;Novo Nordisk Clinical&quot;,
ISPICKVAL(Country__c,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Country is a required field for Novo Nordisk Clinical. Please enter a value for the field</errorMessage>
</ValidationRule>