force-app/main/default/objects/Study__c/validationRules/Sponsor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sponsor_Required</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISNULL(Sponsor__c), ISBLANK(Sponsor__c))</errorConditionFormula>
    <errorDisplayField>Sponsor__c</errorDisplayField>
    <errorMessage>The Sponsor field cannot be left blank for Novartis Organization, Please select valid Sponsor</errorMessage>
</ValidationRule>