force-app/main/default/objects/Study__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Study_Nickname__c</columns>
    <columns>Study_Name__c</columns>
    <columns>Study__c</columns>
    <columns>Status__c</columns>
    <columns>Protocol__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>